Commit al master de index en su verisión más reciente

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Titulo principal 1</h1>
-    <p>Parrafo 1</p>
+    <h1> Titulo principal ahora manejando branches</h1>
+    <p>Parrafo 1 ahora manejando branches</p>
 </body>
 </html>
