Estrcutura inicial de la cabecera

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Titulo principal ahora manejando branches</h1>
+    <h1> Cabecera </h1>
+    <h2> Titulo principal ahora manejando branches</h2>
     <p>Parrafo 1 ahora manejando branches</p>
 </body>
 </html>
