agregado el contenido un parrafo más y cambio de fuente

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1> Titulo principal ahora manejando branches</h1>
     <p>Parrafo 1 ahora manejando branches</p>
+    <p>Contenido adicional añadido desde master</p>
 </body>
 </html>
