agrege parrafo, cabecera y azul

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Cabecera WOOOOW </h1>
+    <h1> Cabecera maestro </h1>
     <h2> Titulo principal ahora manejando branches</h2>
     <p>Parrafo 1 ahora manejando branches</p>
     <p>Contenido adicional añadido desde master</p>
+    <p>Suscribete</p>
 </body>
 </html>
